--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 *.exe
 *.out
 *.app
+*
 
 ### CMake ###
 CMakeLists.txt.user
@@ -87,5 +88,7 @@ _deps
 
 # Ignore code-workspaces
 *.code-workspace
+
+build/
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudiocode,linux,cmake
